feat: update intro

--- a/nlp-with-disaster-tweets.ipynb
+++ b/nlp-with-disaster-tweets.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# NLP with Disaster Tweets\n",
     "\n",
-    "This project aims to develop a deep learning model to predict whether a tweet is about a real disaster or not. The dataset used is from the [Natural Language Processing with Disaster Tweets](https://www.kaggle.com/c/nlp-getting-started/overview) competition on Kaggle. This project will develop and tune two models: a Long Short-Term Memory (LSTM) model and a Gated Recurrent Unit (GRU) model. Both models are Recurrent Neural Networks (RNNs) and are suitable for sequential data like text. This is a supervised learning problem and a binary classification task.\n",
+    "This project aims to use natural language processing (NLP) to classify whether a given tweet is about a real disaster or not. NLP is a subfield of computer science related to analyzing and generating human language using machine learning. This project will develop and tune two recurrent neural network (RNN) models to classify tweets based on their text: a Long Short-Term Memory (LSTM) model and a Gated Recurrent Unit (GRU) model. Both models will be trained and tuned and their performance will be evaluated and compared.\n",
+    "\n",
+    "The dataset used in this project is from the [Natural Language Processing with Disaster Tweets](https://www.kaggle.com/c/nlp-getting-started/overview) competition on Kaggle.\n",
     "\n",
     "The training dataset contains 7613 tweets that are labeled disaster or not, and contains the following columns:\n",
     "- `id`: unique identifier\n",
@@ -393,6 +395,13 @@
     "plt.title('Distribution of Text Lengths')\n",
     "plt.xlabel('Text Length')\n",
     "plt.ylabel('Count')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After preprocessing and tokenization, we see that the max text length is 34. We will pad the sequences to a length of 50 to ensure that all sequences have the same length and in case any unseen data contains more then than 34 tokens."
    ]
   },
   {
