--- a/nlp-with-disaster-tweets.ipynb
+++ b/nlp-with-disaster-tweets.ipynb
@@ -6,11 +6,9 @@
    "source": [
     "# NLP with Disaster Tweets\n",
     "\n",
-    "This project aims to use natural language processing (NLP) to classify whether a given tweet is about a real disaster or not. NLP is a subfield of computer science related to analyzing and generating human language using machine learning. This project will develop and tune two recurrent neural network (RNN) models to classify tweets based on their text: a Long Short-Term Memory (LSTM) model and a Gated Recurrent Unit (GRU) model. Both models will be trained and tuned and their performance will be evaluated and compared.\n",
+    "This project aims to use natural language processing (NLP) to classify whether a given tweet is about a real disaster or not. NLP is a subfield of computer science related to analyzing and generating human language using machine learning. This project will develop and tune two recurrent neural network (RNN) deep learning models to classify tweets: a Long Short-Term Memory (LSTM) model and a Gated Recurrent Unit (GRU) model. Both models will be trained and tuned, and their performance will be evaluated and compared.\n",
     "\n",
-    "The dataset used in this project is from the [Natural Language Processing with Disaster Tweets](https://www.kaggle.com/c/nlp-getting-started/overview) competition on Kaggle.\n",
-    "\n",
-    "The training dataset contains 7613 tweets that are labeled disaster or not, and contains the following columns:\n",
+    "The dataset used in this project is from the [Natural Language Processing with Disaster Tweets](https://www.kaggle.com/c/nlp-getting-started/overview) competition on Kaggle. The training dataset contains 7613 tweets that are labeled disaster or not, and contains the following columns:\n",
     "- `id`: unique identifier\n",
     "- `keyword`: keyword from the tweet (optional)\n",
     "- `location`: location the tweet was sent from (optional)\n",
@@ -333,7 +331,9 @@
    "source": [
     "## Training Models\n",
     "\n",
-    "We'll begin the model training process by tokenizing the text and padding the sequences so that it can be used by the models. We'll then split the data into training and validation datasets. We'll train and tune an LSTM model and a GRU model, tune their hyperparameters, and evaluate their performance."
+    "We'll begin the model training process by tokenizing the text and padding the sequences. Tokenizing converts words into a sequence of numbers which so that the text data can be used by our RNN models. We'll then split the data into training and validation datasets. We'll train and tune an LSTM model and a GRU model, tune their hyperparameters, and evaluate their performance.\n",
+    "\n",
+    "Both the LSTM and GRU models are types of RNNs that are designed to handle sequential data, like text. The LSTM model is designed to handle long-term dependencies in the data, while The GRU model is a simplified version of the LSTM model and is designed to be more efficient. It should be interesting to see how they compare in terms of performance and efficiency!"
    ]
   },
   {
@@ -432,7 +432,7 @@
    "source": [
     "### LSTM Architecture and Training\n",
     "\n",
-    "The LSTM model will consist of an embedding layer, an LSTM layer, and a dense layer. We'll compile the model using the Adam optimizer and binary cross-entropy loss. We'll train the first model, `lstm_model_1`, for 5 epochs. After evaluating it's performance, we will adjust the hyperparameters and train a second model, `lstm_model_2`. We will adjust the learning rate, the number of units in the LSTM layer, the batch size, and the number of epochs. We will introduce early stopping to prevent overfitting."
+    "Our LSTM model will consist of an embedding layer, an LSTM layer, and a dense layer. We'll compile the model using the Adam optimizer and binary cross-entropy loss. We'll train the first model, `lstm_model_1`, for 5 epochs. After evaluating it's performance, we will adjust the hyperparameters and train a second model, `lstm_model_2`. We will adjust the learning rate, the number of units in the LSTM layer, the batch size, and the number of epochs. We will introduce early stopping to prevent overfitting."
    ]
   },
   {
@@ -555,7 +555,7 @@
    "source": [
     "### GRU Architecture and Training\n",
     "\n",
-    "The GRU model will consist of an embedding layer, a GRU layer, and a dense layer. We'll compile the model using the Adam optimizer and binary cross-entropy loss. We'll train the first model, `gru_model_1`, for 5 epochs. After evaluating it's performance, we will adjust the hyperparameters and train a second model, `gru_model_2`. Similar to the LSTM model, we will adjust the learning rate, the number of units in the GRU layer, the batch size, and the number of epochs. We will introduce early stopping to prevent overfitting."
+    "Our GRU model will consist of an embedding layer, a GRU layer, and a dense layer. We'll compile the model using the Adam optimizer and binary cross-entropy loss. We'll train the first model, `gru_model_1`, for 5 epochs. After evaluating it's performance, we will adjust the hyperparameters and train a second model, `gru_model_2`. Similar to the LSTM model, we will adjust the learning rate, the number of units in the GRU layer, the batch size, and the number of epochs. We will introduce early stopping to prevent overfitting."
    ]
   },
   {
@@ -653,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar to the LSTM model, decreasing the learning rate of the GRU model to 0.0001 seemed to improve the model's performance the most. Adjusting the batch size from 64 to 32 may have also helped to improve the performance."
+    "Similar to the LSTM model, decreasing the learning rate of the GRU model to 0.0001 seemed to improve the model's performance the most and ameliorate overfitting. Adjusting the batch size from 64 to 32 may have also helped to improve the performance, but adjusting the number of nodes in the GRU layer did not have much of an impact on the model's performance, so it was kept at 100."
    ]
   },
   {
@@ -1015,7 +1015,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "The LSTM and GRU models both performed well in predicting whether a tweet is about a real disaster or not. They each achieved an accuracy of accuracy of around 80% on the validation and test datasets. The LSTM model may have slightly better accuracy and loss than the GRU model, but the GRU model is simpler and faster to train, which may be an important consideration depending on the use case.\n",
+    "The LSTM and GRU models both performed well in predicting whether a tweet is about a real disaster or not. They each achieved an accuracy of accuracy of around 80% on the validation and test datasets. The LSTM model may have slightly better accuracy and loss than the GRU model, but the GRU model is simpler and faster to train. It's cool to see the theory behind these models play out in practice!\n",
     "\n",
     "In the future, we could further tune the hyperparameters of the models, try different preprocessing techniques, and experiment with different architectures to improve the performance of the models. We could also try other deep learning models, such as a bidirectional LSTM or GRU or a transformer model to see if they can achieve better performance."
    ]
